# OxideBlog

./: .gitignore  Cargo.toml  README.md  index.html
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs
blog-wasm/: Cargo.toml
blog-wasm/src/: lib.rs
