[workspace]
members = ["blog-server", "blog-client", "blog-cli", "blog-wasm"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-web-httpauth = "0.8"
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"
