[package]
name = "blog-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored = "3"
